Addressed spacing issues, linked all socials, footers, added hover effectsto buttons and links

--- a/style/aboutus.css
+++ b/style/aboutus.css
@@ -13,6 +13,9 @@ p, label{
   
 }
 
+a:hover {
+  opacity: 0.5;
+}
 
 .img-bar {
   max-width: 100%;
@@ -178,7 +181,7 @@ form button {
   cursor: pointer;
 }
 
-@media only screen and (min-width: 1050px) {
+@media only screen and (min-width: 1000px) {
 
   p {
     font-size: 24px;
@@ -191,7 +194,8 @@ form button {
     "door door burger veggie";
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    padding: 0 10%;
+    max-width: 98%;
+    margin-top: 7em;
   }
   
   .front-door {
@@ -204,9 +208,8 @@ form button {
   
   .cross-illus {
     display: initial;
-    width: 90%;
+    width: 100%;
     margin-bottom: 2em;
-    padding: 0 5%;
   }
 
   .about-statements {
@@ -221,7 +224,7 @@ form button {
     font-size: 60px;
     align-self: flex-end;
     margin-right: 2em;
-    color: #97c57a;
+    color: #139c93;
     margin-bottom: 0;
   }
 
@@ -234,15 +237,15 @@ form button {
   }
 
   .alumni {
-    height: 50em;
-    background-size: 90% 90%;
+    height: 60em;
+    background-size: 100% 100%;
     background-position: center;
   }
 
   .alumni-recognition {
     align-items: center;
     width: 65%;
-    margin: 5em 5em;
+    margin: 5em auto;
   }
 
   .alumni-recognition img {
@@ -268,12 +271,8 @@ form button {
     justify-content: space-around;
   }
 
-  .education-support {
-    padding: 0 10%;
-  }
-
   .education-support h1 {
-    font-size: 55px;
+    font-size: 46px;
   }
 
   .education-support h2 {
@@ -287,7 +286,7 @@ form button {
   }
 
   .program-categories div {
-    max-width: 25%;
+    max-width: 30%;
   }
 
   .program-contact-info {
@@ -295,8 +294,12 @@ form button {
     justify-content: space-around;
   }
 
+  .program-call-to-action{
+    font-size: 30px;
+  }
+
   .heart-cookies {
-    width: 30%;
+    width: 40%;
     margin-right: 20px;
   }
 
