--- a/style/blog.css
+++ b/style/blog.css
@@ -5,6 +5,15 @@
     margin: 0;
 }
 
+p{
+    font-size: 18px;
+    line-height: 1.5em;
+}
+
+a:hover {
+    opacity: 0.5;
+}
+
 /* Start: section blog-posts */
 .blog {
     position: relative;
