--- a/style/contact.css
+++ b/style/contact.css
@@ -3,22 +3,33 @@ body {
 }
 
 h2 {
-    font-size: 24px;
+    font-size: 20px;
     text-transform: uppercase;
-    font-family: "Montserrat-Bold";
+    font-family: "Montserrat-Semi-Bold";
+    color: #585a5e;
+    letter-spacing: 1px;
 }
 
 p {
     font-family: "Lato-Regular";
+    color: #585A5E;
+    font-size: 17px;
+    letter-spacing: 1px;
 }
 
-img {
+.container img {
     max-width: 100%;
+    margin-right: 1em;
 }
 
 a {
     text-decoration: none;
     color: #585A5E;
+    letter-spacing: 1px;
+}
+
+a:hover {
+    opacity: 0.5;
 }
 
 .desktop-display {
@@ -55,22 +66,20 @@ a {
 }
 
 .contact-info img {
-    margin-right: 10px;
+    margin-right: 1em;
 }
 
 .contact-info span {
     display: flex;
     align-items: center;
     font-family: 'Lato-Regular';
+    margin-bottom: 1em;
 }
 
 .hours-of-operation {
     display: flex;
     flex-direction: column;
-}
-
-.hours-of-operation h2 {
-    padding-left: 25px;
+    padding: 0 10%;
 }
 
 .hours-of-operation div {
@@ -79,7 +88,7 @@ a {
 }
 
 .hours-of-operation img {
-    padding: 25px;
+    width: 9%;
 }
 
 .location {
@@ -87,24 +96,22 @@ a {
 }
 
 .location h2 {
-    font-size: 24px;
     margin-bottom: 2em;
 }
 
 .find-us {
     display: flex;
+    align-content: center;
 }
 
 .find-us img {
-    width: 8%;
-    height: 8%;
-    margin-right: 10px;
+    object-fit: contain;
 }
 
 iframe {
     margin-top: 2em;
-    width: 70vw;
-    height: 150px;
+    width: 100%;
+    height: 200px;
 }
 
 form label {
@@ -161,12 +168,15 @@ form button {
         display: none;
     }
     .desktop-display {
-        display: block;
+        display: initial;
     }
     .container {
         display: grid;
-        grid-template-areas: "contact hours . form" "map map . form" "footer footer footer footer";
-        grid-template-columns: 1fr 1fr .5fr 2fr;
+        grid-template-areas: 
+        "contact hours . form" 
+        "map map . form" 
+        "footer footer footer footer";
+        grid-template-columns: 1fr 1fr .5fr 1fr;
         grid-template-rows: 1fr 1fr 0.5fr;
     }
     .hallway-contact {
@@ -175,7 +185,6 @@ form button {
     }
     .hallway-contact h2 {
         font-size: .9rem;
-        ;
     }
     .hallway-contact img {
         width: 25px;
@@ -187,7 +196,6 @@ form button {
     .hours-of-operation {
         grid-area: hours;
         flex-direction: column;
-        /*align-items: flex-end;*/
         padding-left: 100px;
     }
     .hours-of-operation p {
