--- a/style/dinein.css
+++ b/style/dinein.css
@@ -1,11 +1,10 @@
 @import "./footer.css";
 body {
-    margin-top: 7em;
+    margin-top: 6em;
 }
 
 h2 {
     font-family: "Montserrat-Bold";
-    text-transform: uppercase;
     color: #139c93;
 }
 
@@ -21,6 +20,12 @@ img {
 p {
     font-size: 18px;
     font-family: 'Lato-Regular';
+    color: #585A5E;
+    letter-spacing: .75px;
+}
+
+a:hover {
+    opacity: 0.5;
 }
 
 hr {
@@ -30,13 +35,16 @@ hr {
 
 .feature-food-carousel {
     background: #ffd16b;
-    padding: 5% 0;
+    margin: 0;
+    padding-bottom: 5%;
 }
 
 
 .feature-food-carousel h2, h3 {
     text-align: center;
-    padding: 0 10%;
+    margin: 0 10%;
+    letter-spacing: 1px;
+    line-height: 2em;
 }
 
 svg {
@@ -44,18 +52,22 @@ svg {
 }
 
 .feature-description p {
-    text-align: left;
-    padding: 0 10%;
+    text-align: center;
+    margin: 0 10%;
+    letter-spacing: 1px;
+    line-height: 1.25em;
 }
 
 .menu {
-    text-align: left;
+    text-align: center;
     margin-top: 40px;
-    padding: 0 10%;
+    margin: 0 10%;
 }
 
 .menu h2 {
     text-align: center;
+    text-transform: uppercase;
+    margin-top: 3em;
 }
 
 .menu-description {
@@ -71,6 +83,7 @@ svg {
 .menu img {
     display: block;
     width: 50%;
+    min-width: 250px;
     margin-left: auto;
     margin-right: auto;
     border: 1px solid black;
@@ -93,12 +106,32 @@ svg {
     padding: 5% 10%;
 }
 
+.customer-review-carousel {
+    display: flex;
+    justify-content: center;
+}
+
+.review-border-top {
+    background: #979797;
+    height: 2px;
+    width: 60%;
+    position: relative;
+    margin: 0 auto;
+    margin-top: 3em;
+}
+
+.review-border-bottom {
+    background: #979797;
+    height: 2px;
+    width: 60%;
+    position: relative;
+    margin: 0 auto;
+    margin-bottom: 3em;
+}
+
 .quote {
     display: flex;
     justify-content: center;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
-    margin: 2em 1em;
 }
 
 .reviewContent {
@@ -169,34 +202,58 @@ svg {
     grid-area: nonna;
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 1000px) {
+
+    body {
+        margin-top: 7em;
+    }
 
     .feature-food-carousel {
         display: flex;
-        padding: 0;
         position: relative;
+        margin: 0;
+        padding-bottom: 0;
     }
     
     .feature-food-carousel img{
-        max-width: 60%;
+        max-width: 66vw;
+        margin: 0;
         object-fit: cover;
     }
-
+    
     .feature-food-carousel article {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
     }
 
+    .feature-food-carousel h2, h3 {
+        text-align: left;
+        margin-bottom: 1em;
+        line-height: 1.5em;
+    }
+
+    .feature-food-carousel h2 {
+        color: #585A5E;
+        margin-top: 2em;
+    }
+
+    .feature-food-carousel p {
+        text-align: left;
+        font-size: 17px;
+    }
+
     .feature-description {
-        max-width: 30%;
+        max-width: 30vw;
+        margin-left: 3em;
     }
 
     svg {
         display: initial;
         position: absolute;
         top: 0;
-        width: 33vw;
+        right: 0;
+        width: 30vw;
         height: 100%;
     }
 
@@ -217,6 +274,7 @@ svg {
     .menu-description h2 {
         grid-area: title;
         font-size: 60px;
+        align-self: start;
     }
 
     .menu-description p {
@@ -229,6 +287,7 @@ svg {
         width: 60%;
         grid-area: dineInMenu;
         place-self: center end;
+        margin-top: 6em;
     }
 
     .menu-download {
@@ -245,6 +304,7 @@ svg {
     .quote {
         max-width: 70%;
     }
+
     .dinein-photos {
         display: grid;
         grid-template-areas: "brussel  caesar parfait" "smoked turkey hawaiian" "cappucino pancetta tartar" "soup buckwheat nonna";
