--- a/style/footer.css
+++ b/style/footer.css
@@ -6,5 +6,7 @@ footer {
 footer a {
     color: #585a5e;
     text-decoration: none;
-    margin: 1rem;
+}
+a:hover {
+    opacity: 0.5;
 }
